--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "styled-components": "^6.1.17",
+    "expo-font": "~13.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^5.3.3"
   },
   "private": true
