--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.3.0",
+    "@expo-google-fonts/roboto": "^0.3.0",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.43",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "phosphor-react-native": "^2.3.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "styled-components": "^6.1.17",
-    "expo-font": "~13.0.4"
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
   },
+
   "private": true
 }
