--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,27 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "baseUrl": "./src",
+    "strict": true, 
+    "baseUrl": "./",
     "paths": {
       "@assets/*": [
         "./src/assets/*"
       ],
-      "@components": [
+      "@components/*": [
         "./src/components/*"
       ],
-      "@screens": [
+      "@routes/*": [
+        "./src/routes/*"
+      ],
+      "@screens/*": [
         "./src/screens/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
+      ], 
+      "@styles/*": [
+        "./src/styles/*"
       ]
     }
-  },
+  }
 }
